Fix: add height auto on xs breakpoint to product__swiper element, helps vertical align swiper buttons

--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -24,6 +24,10 @@
 
   &__swiper {
     height: 500px;
+
+    @include respond-below(xs) {
+      height: auto;
+    }
   }
 
   &__description {
